Fixed dropdown spacing after bootstrapping

--- a/src/Public/css/planner.css
+++ b/src/Public/css/planner.css
@@ -38,7 +38,6 @@ body {
   padding: 0;
 }
 #resource-add-header {
-  height: 88px;
   background-color: #777;
 }
 #resource-add-header .tt-hint {
